- Updated sidebars related CSS to avoid CX z-index issues

--- a/inst/fw_templ/p_example/custom.css
+++ b/inst/fw_templ/p_example/custom.css
@@ -3,6 +3,7 @@
 /************************/
 aside#sidebarId, aside#controlbarId {
     position: absolute;
+    z-index: 0!important;
 }
 
 /* Application title */
